--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Application Portal</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
@@ -18,8 +20,9 @@
     <div class="container">
         <div class="form-container" id="formContainer">
             <h2 class="text-center">Application Form</h2>
-            <p class="text-center">You are required to fill all the input in this form and fill the form according to your level</p>
-            
+            <p class="text-center">You are required to fill all the input in this form and fill the form according to
+                your level</p>
+
             <div class="error-message" id="errorMessage">
                 ⚠️ All fields are required. Please fill out the form completely.
             </div>
@@ -41,7 +44,7 @@
             <div class="form-group">
                 <label for="gender" class="form-label">Gender</label>
                 <select id="gender" class="form-control">
-                    <option value="select">Select your gender</option>
+                    <option value="select" disabled selected>Select your gender</option>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
                 </select>
@@ -54,7 +57,23 @@
 
             <div class="form-group">
                 <label for="course" class="form-label">Course</label>
-                <input type="text" class="form-control" placeholder="Enter the course you are offering" id="course">
+
+                <select name="course" id="course" class="form-control">
+                    <option value="" disabled selected>Select your course</option>
+                    <option value="Web Development">Web Development</option>
+                    <option value="Software Engineering">Software Engineering</option>
+                    <option value="Cyber Security">Cyber Security</option>
+                    <option value="Data Analysis">Data Analysis</option>
+                    <option value="Artificial Intelligence">Artificial Intelligence</option>
+                    <option value="Data Science">Data Science</option>
+                    <option value="Product Design">Product Design</option>
+                    <option value="Mobile Application Developer">Mobile Application Developer</option>
+                    <option value="Dev Ops">Dev Ops</option>
+                    <option value="Graphics Design">Graphics Design</option>
+                    <option value="3D Animation">3D Animation</option>
+                    <option value="Java Programming">Java Programming</option>
+
+                </select>
             </div>
 
             <button class="submit-btn" onclick="submitForm()">
@@ -77,13 +96,40 @@
                         <th>Email</th>
                         <th>Course</th>
                         <th>Matric Number</th>
+                        <th>Action</th>
                     </tr>
                 </table>
             </div>
         </div>
     </div>
 
-    
+    <div class="my-4 text-center" id="showOption" style="display: none;">
+
+    </div>
+
+    <div class="modal fade" id="deleteModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Confirm Delete</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this student?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Yes</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 <script src="script.js"></script>
+
 </html>
